full-moon/tests/cases/fail/parser/local-function-7/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/local-function-7
---
error[ast]: unexpected token `,`. , (trailing commas in arguments are not allowed)
  ┌─ source.lua:1:24
  │
1 │ local function foo(x, y,)
  │                        ^


